--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,13 +33,13 @@
             app:tabTextColor="@android:color/white">
 
             <android.support.design.widget.TabItem
-                android:id="@+id/tab1"
+                android:id="@+id/tabItem1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Tab1" />
 
             <android.support.design.widget.TabItem
-                android:id="@+id/tab2"
+                android:id="@+id/tabItem2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Tab2" />
