--- a/app/src/main/res/layout/fragment_tab1.xml
+++ b/app/src/main/res/layout/fragment_tab1.xml
@@ -5,7 +5,7 @@
     android:id="@+id/fraglayout1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.tab1Fragment">
+    tools:context=".fragments.Tab1Fragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
